<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSecondary"
    android:fitsSystemWindows="true"
    tools:context="com.quantumsoftwaresolutions.quantumfinance.activity.LoginActivity">

    <include
        android:id="@+id/app_bar_notabs"
        layout="@layout/app_bar_notabs" />

    <TextView
        android:id="@+id/progressMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="invisible"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:padding="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/rememberUser" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:onClick="onSubmitClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:id="@+id/register"
        android:onClick="onRegisterClick"/>
</LinearLayout>
